--- a/css/screen.css
+++ b/css/screen.css
@@ -8,7 +8,6 @@ fieldset {
 	border: yellow solid;
 		text-align: center;
 		height: 200px;
-		margin: 0 auto;
 }
 
 header {
@@ -16,9 +15,17 @@ header {
 	color: #313EEF;
 	width: 100%;
 	position: fixed;
+}
+
+h1 {
+	font-size: 3em;
 	text-align: center;
-	font: 17pt;
-	margin: 10px;
+	width: 100%;
+}
+
+legend{
+	font-size: 2em;
+	font-weight: bold;
 }
 
 /*Desktop*/
