--- a/css/screen.css
+++ b/css/screen.css
@@ -2,29 +2,44 @@
 body {
 	background-color: #313EEF;
 	font-family: system-ui;
+	font: 17px;
+}
+
+div {
+	font-size: 2em;
+	height: 100px;
 }
 
 fieldset {
 	border: yellow solid;
-		text-align: center;
-		height: 200px;
+	text-align: center;
+	height: 200px;
 }
+
+label {
+	display: block;
+	float: left;
+	width: 100%;
+	height: 15%
+}
+
 
 header {
 	background-color: #F8AE45;
 	color: #313EEF;
 	width: 100%;
 	position: fixed;
+	margin: 1em auto;
 }
 
 h1 {
-	font-size: 3em;
+	font-size: 4em;
 	text-align: center;
 	width: 100%;
 }
 
 legend{
-	font-size: 2em;
+	font-size: 3em;
 	font-weight: bold;
 }
 
