--- a/css/screen.css
+++ b/css/screen.css
@@ -32,6 +32,13 @@ header {
 	margin: 1em auto;
 }
 
+#button {
+	color: white;
+	background-color: yellow;
+	width: fit-content; 
+	font size: 2em;
+	padding: 1em;
+
 h1 {
 	font-size: 4em;
 	text-align: center;
