--- a/css/screen.css
+++ b/css/screen.css
@@ -8,7 +8,7 @@ body{
 header h1{
     text-align: center;
 	margin: 1em auto;
-    font-size: 2.3em;
+    font-size: 4em;
 }
 
 .form label{
@@ -33,7 +33,7 @@ header{
 }
 
 .form .label{
-    font-size: 1.5em;
+    font-size: 2em;
     width: 90%;
     margin: 1em auto;
     text-align: left
@@ -59,6 +59,7 @@ header{
     width: 35%;
     height: 4em;
     background-color: yellow;
+	text-color: green;
     border-radius: 10px;
 }
 
