--- a/css/screen.css
+++ b/css/screen.css
@@ -11,11 +11,7 @@ header h1{
     font-size: 4em;
 }
 
-.form label{
-    display: block;
-}
-
-.form{
+form{
     height: 50%;
     width: 90%;
     position: fixed;
@@ -32,7 +28,7 @@ header{
     position: fixed;
 }
 
-.form .label{
+label{
     font-size: 5em;
     width: 90%;
     margin: 3em auto;
@@ -56,11 +52,10 @@ header{
     text-align: center;
 }
 
-.form .button{
-    height: 4em;
-    background-color: yellow;
-	text-color: green;
-}
+#button {
+	margin-top: 1em;
+	color: green;
+	background-color: yellow; 
 
 /*Desktop*/
 @media screen and (min-width: 1000px) {
