--- a/css/screen.css
+++ b/css/screen.css
@@ -29,14 +29,20 @@ header{
 }
 
 label{
-    font-size: 5em;
+    font-size: 2em;
     width: 90%;
     margin: 3em auto;
     text-align: left
 }
 
-legend {
-	text-align: right;
+.form fieldset legend{
+	
+    font-size: 2.5em;
+    text-align: right;
+}
+
+.form fieldset{
+    margin: 0 auto;
 }
 
 .button-container{
