--- a/css/screen.css
+++ b/css/screen.css
@@ -11,7 +11,11 @@ header h1{
     font-size: 4em;
 }
 
-form{
+.form label{
+    display: block;
+}
+
+.form{
     height: 50%;
     width: 90%;
     position: fixed;
@@ -28,8 +32,8 @@ header{
     position: fixed;
 }
 
-label{
-    font-size: 2em;
+.form .label{
+    font-size: 5em;
     width: 90%;
     margin: 3em auto;
     text-align: left
@@ -56,6 +60,7 @@ label{
 	margin-top: 1em;
 	color: green;
 	background-color: yellow; 
+}
 
 /*Desktop*/
 @media screen and (min-width: 1000px) {
