--- a/css/screen.css
+++ b/css/screen.css
@@ -1,7 +1,7 @@
 body{
     font-family: "Times New Roman", Times, serif;
     min-height: 100vh;
-    background-color: #313EEF; 
+    background-color: #7aeb34; 
 }
 
 
